css changes for jumbotron

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="https://www.gstatic.com/firebasejs/5.7.3/firebase.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.23.0/moment.min.js"></script>
@@ -18,7 +19,7 @@
     <div class="container">
     
         <!-- Header: Jumbotron -->
-        <div class="jumbotron jumbotron-fluid text-center" style="background-color: #eff1f3">
+        <div class="jumbotron jumbotron-fluid text-center">
             <h1 class="display-4 text-center"><strong>Chugga-Chugga Choo-Choo!</strong></h1>
             <h2>Train Scheduler</h2>
         </div>
@@ -47,6 +48,7 @@
                 </div>
             </div>
         </div>
+        
         <!-- Add Train -->
         <div class="panel panel-primary">
             <div class="panel-heading text-center">
