--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
         <!-- Add Train -->
         
     </div>
+    
+    <footer>&copy; Copyright 2019 Kevin Patel</footer>
 
     <script type="text/javascript" src="assets/javascript/app.js"></script>
 </body>
