--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
         
     </div>
 
+    <footer>&copy; Copyright 2019 Kevin Patel</footer>
+
     <script type="text/javascript" src="assets/javascript/app.js"></script>
 </body>
 </html>
